src/ui/_styles/globals.css
@import 'tailwindcss';
@import './animations.css';
@import './colors.css';
@import './typography.css';
@import './shadows.css';
@import './embla.css';

@source '../../';

@theme {
	--ease-smooth: cubic-bezier(0.165, 0.84, 0.44, 1);

	--container-max-xl: 85rem;
	--container-max-lg: 69rem;
	--container-max-md: 55rem;
	--container-max-sm: 42.5rem;
	--container-max-xs: 30rem;
	--container-max-2xs: 23.75rem;
	--container-max-editorial-widest: 69rem;
	--container-max-editorial-wide: 57.5rem;
	--container-max-editorial-narrow: 50rem;

	--container-padding: clamp(1.5rem, 0.333rem + 5.185vw, 5rem);

	--radius-none: 0px;
	--radius-2xs: 2px;
	--radius-xs: 4px;
	--radius-sm: 8px;
	--radius-md: 12px;
	--radius-lg: 16px;
	--radius-xl: 24px;
	--radius-2xl: 32px;
}

@theme inline {
	--font-primary: var(--font-primary);
	--font-secondary: var(--font-secondary);

	--spacing-responsive-7xl: var(--responsive-7xl);
	--spacing-responsive-6xl: var(--responsive-6xl);
	--spacing-responsive-5xl: var(--responsive-5xl);
	--spacing-responsive-4xl: var(--responsive-4xl);
	--spacing-responsive-3xl: var(--responsive-3xl);
	--spacing-responsive-2xl: var(--responsive-2xl);
	--spacing-responsive-xl: var(--responsive-xl);
	--spacing-responsive-lg: var(--responsive-lg);
	--spacing-responsive-md: var(--responsive-md);
	--spacing-responsive-sm: var(--responsive-sm);
	--spacing-responsive-xs: var(--responsive-xs);
	--spacing-responsive-2xs: var(--responsive-2xs);
	--spacing-responsive-3xs: var(--responsive-3xs);
	--spacing-responsive-4xs: var(--responsive-4xs);
	--spacing-responsive-5xs: var(--responsive-5xs);
	--spacing-responsive-6xs: var(--responsive-6xs);
}

@utility container {
	margin-inline: auto;
	padding-inline: var(--container-padding);
}

@utility duration-slow {
	@apply duration-200;
}

@utility duration-normal {
	@apply duration-600;
}

@utility duration-fast {
	@apply duration-450;
}

@layer base {
	:root {
		--section-spacing: 3rem;
		--header-offset: 5.5rem;

		/* These responsive size clamp values are from 375-768px browser width */
		--responsive-7xl: clamp(4rem, 2.33rem + 7.125vw, 5.75rem);
		--responsive-6xl: clamp(3.5rem, 2.307rem + 5.089vw, 4.75rem);
		--responsive-5xl: clamp(3rem, 1.569rem + 6.107vw, 4.5rem);
		--responsive-4xl: clamp(2.75rem, 2.154rem + 2.545vw, 3.375rem);
		--responsive-3xl: clamp(2.625rem, 2.208rem + 1.781vw, 3.063rem);
		--responsive-2xl: clamp(2.5rem, 2.261rem + 1.018vw, 2.75rem);
		--responsive-xl: clamp(2rem, 1.761rem + 1.018vw, 2.25rem);
		--responsive-lg: clamp(1.5rem, 1.324rem + 0.751vw, 2rem);
		--responsive-md: clamp(1.25rem, 1.162rem + 0.376vw, 1.5rem);
		--responsive-sm: clamp(1.125rem, 1.081rem + 0.188vw, 1.25rem);
		--responsive-xs: 1rem;
		--responsive-2xs: 0.75rem;
		--responsive-3xs: 0.5rem;
		--responsive-4xs: 0.375rem;
		--responsive-5xs: 0.25rem;
		--responsive-6xs: 0.125rem;

		/* These responsive size clamp value overides are from 768-1440px browser width */
		@apply md:[--responsive-7xl:clamp(5.75rem,3.75rem+4.167vw,7.5rem)];
		@apply md:[--responsive-6xl:clamp(4.75rem,3.321rem+2.976vw,6rem)];
		@apply md:[--responsive-5xl:clamp(4.5rem,3.929rem+1.19vw,5rem)];
		@apply md:[--responsive-4xl:clamp(3.375rem,2.661rem+1.488vw,4rem)];
		@apply md:[--responsive-3xl:clamp(3.063rem,2.563rem+1.042vw,3.5rem)];
		@apply md:[--responsive-2xl:clamp(2.75rem,2.464rem+0.595vw,3rem)];
		@apply md:[--responsive-xl:clamp(2.25rem,1.964rem+0.595vw,2.5rem)];
		@apply md:[--section-spacing:4rem];
		@apply lg:[--header-offset:8.125rem];
	}

	button,
	[role='button'] {
		cursor: pointer;
	}

	.no-nested-containers * {
		--container-max-width: none !important;
		--container-padding: 0 !important;
	}

	html,
	body {
		font-family: var(--font-primary);
		font-size: clamp(1rem, 0.427rem + 0.545vw, 1.3rem);
		color: hsl(var(--hsla-text-primary) / 1);
		-webkit-font-smoothing: antialiased;
		-moz-osx-font-smoothing: grayscale;
		scroll-padding-top: 8rem;
		padding: 0 !important;
		scroll-behavior: smooth;
		h1[id],
		h2[id] {
			scroll-margin-top: 2.5rem;
		}
	}

	mux-player {
		--media-object-fit: cover !important;
		aspect-ratio: var(--media-aspect-ratio) !important;
	}

	a,
	button,
	input[type='submit'],
	summary {
		@apply focus:outline-hidden focus-visible:outline-2 focus-visible:outline-neutral-400 focus-visible:outline-offset-1;
	}
}

@layer utilities {
	.hide-scrollbar::-webkit-scrollbar {
		display: none;
	}

	.link {
		background-image: linear-gradient(currentColor, currentColor);
		background-position: 0 100%;
		background-repeat: no-repeat;
		background-size: 0 0.0625em;
		transition: background-size 450ms cubic-bezier(0.165, 0.84, 0.44, 1);

		&:hover {
			background-size: 100% 0.0625em;
		}
	}

	.link-inverse {
		background-image: linear-gradient(currentColor, currentColor);
		background-position: 0 100%;
		background-repeat: no-repeat;
		background-size: 100% 0.0625em;
		transition: background-size 450ms cubic-bezier(0.165, 0.84, 0.44, 1);

		&:hover {
			background-size: 0 0.0625em;
		}
	}

	.quote {
		--quote-open: '\201C';
		--quote-close: '\201D';
	}

	.open-quote::before {
		content: '\201C';
		margin-right: 0.1em;
	}

	.close-quote::after {
		content: '\201D';
		margin-left: 0.1em;
	}

	.mux-hide-controls {
		& mux-player {
			--live-button: none;
			--seek-backward-button: none;
			--seek-forward-button: none;
			--captions-button: none;
			--airplay-button: none;
			--pip-button: none;
			--fullscreen-button: none;
			--cast-button: none;
			--playback-rate-button: none;
			--volume-range: none;
			--time-display: none;
			--duration-display: none;
			--rendition-selectmenu: none;

			&::part(control-bar bottom) {
				display: none;
			}

			&::part(button) {
				display: none;
			}

			&::part(time range) {
				display: none;
			}
		}
	}

	input[type='search']::-webkit-search-cancel-button {
		-webkit-appearance: none;
		appearance: none;
	}

	.shadow-xl-duo {
		box-shadow:
			var(--shadow-xl-1-offset-x, 0) var(--shadow-xl-1-offset-y, 20px) var(--shadow-xl-1-blur-radius, 25px)
				var(--shadow-xl-1-spread-radius, -5px) var(--shadow-xl-1-color, rgba(0, 0, 0, 0.1)),
			var(--shadow-xl-2-offset-x, 0) var(--shadow-xl-2-offset-y, 8px) var(--shadow-xl-2-blur-radius, 10px)
				var(--shadow-xl-2-spread-radius, -6px) var(--shadow-xl-2-color, rgba(0, 0, 0, 0.1));
	}
}

